기상청, async 등
